# soorma-core

./: .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  EXAMPLES_REFACTOR_PLAN.md  LICENSE  README.md
libs/soorma-common/: CHANGELOG.md  README.md  pyproject.toml
libs/soorma-common/src/soorma_common/: __init__.py  a2a.py  decisions.py  events.py  models.py  state.py  tenancy.py  tracker.py  tracking.py
libs/soorma-common/tests/: __init__.py  test_a2a.py  test_decisions.py  test_events.py  test_registry_dtos.py  test_state.py  test_tenancy.py  test_tracker.py  test_tracking.py
libs/soorma-nats/: CHANGELOG.md  README.md  pyproject.toml
libs/soorma-nats/src/soorma_nats/: __init__.py  client.py  exceptions.py
libs/soorma-nats/tests/: __init__.py  conftest.py  test_nats_client.py  test_nats_integration.py
libs/soorma-service-common/: CHANGELOG.md  README.md  pyproject.toml
libs/soorma-service-common/src/soorma_service_common/: __init__.py  deletion.py  dependencies.py  middleware.py  tenant_context.py
libs/soorma-service-common/tests/: conftest.py  test_deletion.py  test_dependencies.py  test_middleware.py  test_tenant_context.py
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/docs/: EVENT_ARCHITECTURE.md  MEMORY_SERVICE.md
sdk/python/soorma/: __init__.py  auth.py  context.py  events.py  gateway.py  models.py  plan_context.py  task_context.py  workflow.py
sdk/python/soorma/agents/: __init__.py  base.py  planner.py  tool.py  worker.py
sdk/python/soorma/ai/: choreography.py  event_toolkit.py  selection.py  tools.py
sdk/python/soorma/cli/: __init__.py  main.py
sdk/python/soorma/identity/: __init__.py  client.py  wrapper.py
sdk/python/soorma/memory/: __init__.py  client.py
sdk/python/soorma/registry/: client.py
sdk/python/soorma/tracker/: __init__.py  client.py
sdk/python/soorma/utils/: schema_utils.py
sdk/python/tests/: __init__.py  test_a2a_gateway_helper.py  test_agent_auto_recovery_integration.py  test_agent_event_routing.py  test_agent_heartbeat_recovery.py  test_agent_structured.py  test_agents.py  test_ai_event_toolkit.py  test_ai_tools.py  test_bus_client.py  test_choreography.py  test_choreography_integration.py  test_context_identity_wrapper.py  test_context_memory_deletion.py  test_context_tracker_wrapper.py  test_context_wrappers.py  test_event_client_registration.py  test_event_envelope_handlers.py  test_event_selector.py  test_example_auth_bootstrap.py  test_goal_context_dispatch.py  test_identity_service_client.py  test_memory_client.py  test_memory_client_deletion.py  test_on_event_decorator.py  test_planner.py  test_planner_flow.py  test_registry_client.py  test_registry_discover.py  test_registry_schema_client.py  test_registry_service_client.py  test_sdk_semantic_upsert_privacy.py  test_task_context_metadata.py  test_tool_worker_integration.py  test_tracker_service_client.py  test_workflow.py  test_workflow_integration.py
sdk/python/tests/agents/: test_plan_context.py  test_planner_integration.py  test_task_context.py  test_tool_phase3.py  test_worker_integration.py  test_worker_phase3.py
sdk/python/tests/cli/: test_dev.py  test_init.py  test_main.py
sdk/python/tests/integration/: __init__.py  conftest.py  test_a2a_gateway_roundtrip.py  test_e2e_discovery.py  test_multi_tenant_isolation.py
services/event-service/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/event-service/src/: __init__.py  config.py  main.py
services/event-service/src/adapters/: __init__.py  base.py  memory_adapter.py  nats_adapter.py
services/event-service/src/api/: dependencies.py
services/event-service/src/core/: config.py
services/event-service/src/models/: schemas.py
services/event-service/src/services/: event_manager.py
services/event-service/tests/: __init__.py  conftest.py  test_api.py  test_hello_world_flow.py  test_memory_adapter.py  test_multi_tenancy.py  test_queue_groups.py  test_sdk_compatibility.py  test_sse_integration.py
services/identity-service/: CHANGELOG.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/identity-service/alembic/: env.py
services/identity-service/alembic/versions/: 0001_identity_core_init.py  0002_tenant_admin_credentials.py
services/identity-service/tests/: __init__.py  conftest.py  test_admin_credentials_api.py  test_audit_service.py  test_delegated_issuer_api.py  test_discovery_api.py  test_health.py  test_mapping_policy_api.py  test_mappings_api.py  test_onboarding_api.py  test_principal_lifecycle_api.py  test_provider_facade.py  test_token_api.py
services/memory/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP_API_KEY_AUTH.md  SEMANTIC_MEMORY_UPSERT.md  alembic.ini  entrypoint.sh  pyproject.toml
services/memory/alembic/: README  env.py
services/memory/tests/: TEST_COVERAGE.md  conftest.py  test_api_validation.py  test_config.py  test_database_utils.py  test_embedding_service.py  test_episodic_service.py  test_middleware.py  test_multi_tenancy.py  test_plan_context.py  test_semantic_crud.py  test_semantic_memory.py  test_semantic_service.py  test_semantic_upsert_privacy.py  test_semantic_upsert_privacy_simple.py  test_task_context.py  test_working_memory.py  test_working_memory_deletion.py
services/registry/: CHANGELOG.md  Dockerfile  MULTI_TENANCY_REMAINING_WORK.md  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/registry/alembic/: env.py
services/registry/tests/: __init__.py  conftest.py  test_agent_deduplication.py  test_agent_discovery.py  test_agent_dto.py  test_agent_ttl.py  test_agent_ttl_api.py  test_api_endpoints.py  test_background_cleanup.py  test_event_dto.py  test_expired_agent_cascade_delete.py  test_orphaned_capability_bug.py  test_schema_endpoints.py
services/tracker/: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/tracker/alembic/: __init__.py  env.py  script.py.mako
services/tracker/tests/: conftest.py  test_main.py  test_nats_subscribers.py  test_query_api.py  test_subscribers.py
(+641 files in other folders)
