[tool.poetry]
name = "soorma-core"
version = "0.7.0"
description = "The Open Source Foundation for AI Agents. Powered by the DisCo (Distributed Cognition) architecture."
authors = ["Soorma AI <founders@soorma.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://soorma.ai"
repository = "https://github.com/soorma-ai/soorma-core"
keywords = ["ai", "agents", "disco", "distributed-systems", "llm", "orchestration"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "soorma" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
typer = ">=0.13.0"  # 0.12.x had packaging issues with typer-slim split
rich = ">=10.11.0"
httpx = ">=0.26.0"  # For EventClient SSE streaming
soorma-common = {path = "../../libs/soorma-common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
soorma = "soorma.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"