[project]
name = "memory-service"
version = "0.7.6"
description = "Memory Service for Soorma platform - persistent memory layer for autonomous agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",    # PostgreSQL async driver for production
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync driver for Alembic migrations
    "alembic>=1.12.0",    # Database migrations
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.0",    # PostgreSQL vector extension support
    "openai>=1.0.0",      # For embedding generation
    "pyjwt>=2.8.0",       # JWT token parsing
    "soorma-common",      # Shared DTOs
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "aiosqlite>=0.19.0",  # SQLite async driver for testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
