[project]
name = "registry-service"
version = "0.7.6"
description = "Event and Agent Registry Service for Soorma platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",  # SQLite async driver for local development
    "asyncpg>=0.29.0",    # PostgreSQL async driver for production
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync driver for Alembic migrations
    "alembic>=1.12.0",    # Database migrations
    "pydantic-settings>=2.0.0",
    "cachetools>=5.0.0",
    "soorma-common",  # Local dependency
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_service"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
